force-app/main/default/objects/Contact/fields/Doctor_Referral_Code__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Referral_Code__c</fullName>
    <externalId>true</externalId>
    <label>Doctor Referral Code</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>