force-app/main/default/objects/Contact/fields/Medical_Registration_No__c.field-meta.xml
<CustomField>
    <fullName>Medical_Registration_No__c</fullName>
    <label>Registration No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>